Fixing the Overflow for the Page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
     width: 100%;
     background-size: cover !important;
     -webkit-background-size: cover !important;
-    overflow: hidden;
+    background-repeat: no-repeat;
 }
 
 a {
